# multimodal-sensor-fusion-with-attention-RajeevAtla

./: .gitignore  notes.md  pyproject.toml
.github/workflows/: ablation_attention.yml  ablation_heads.yml  ablation_windows.yml  baseline_single_modality.yml  ci.yml  complete_run.yml  parallel_run.yml
config/: base.yaml
data/: preprocess.py
data/processed/subject_104/: activity_5.csv
data/splits/: test.txt  train.txt  val.txt
experiments/: evaluation_results.json  fusion_comparison.json  missing_modality.json
experiments/early/: evaluation_results.json  missing_modality.json
experiments/hybrid/: evaluation_results.json  missing_modality.json
experiments/late/: evaluation_results.json  missing_modality.json
experiments/single_heart_rate/: evaluation_results.json  uncertainty.json
experiments/single_imu_ankle/: evaluation_results.json  uncertainty.json
experiments/single_imu_chest/: evaluation_results.json  uncertainty.json
experiments/single_imu_hand/: evaluation_results.json  uncertainty.json
report/: citations.bib  report.typ
runs/a2_early_pamap2/: results.json
runs/a2_hybrid_pamap2/: results.json
runs/a2_late_pamap2/: results.json
runs/a2_single_heart_rate/: results.json
runs/a2_single_imu_ankle/: results.json
runs/a2_single_imu_chest/: results.json
runs/a2_single_imu_hand/: results.json
src/: analysis.py  attention.py  data.py  encoders.py  eval.py  fusion.py  train.py  uncertainty.py
tests/: test_analysis.py  test_attention.py  test_data.py  test_encoders.py  test_eval.py  test_fusion.py  test_train.py  test_uncertainty.py
(+38 files in other folders)
